Closed Bug 836875 Opened 12 years ago Closed 12 years ago

Background is no longer painted in Print output/Print preview

Categories

(Core :: Printing: Output, defect)

20 Branch
x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21
Tracking Status
firefox20 + verified
firefox21 + verified

People

(Reporter: alice0775, Assigned: smaug)

References

Details

(Keywords: regression)

Attachments

(3 files)

Build Identifier: http://hg.mozilla.org/releases/mozilla-aurora/rev/a728a1f234a0 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20130131 Firefox/20.0 ID:20130131042017 http://hg.mozilla.org/mozilla-central/rev/20bbf73921f4 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130131 Firefox/21.0 ID:20130131031009 Steps to reproduce: 1. Open Attached testcase html 2. Check "Print Background (colors & images)" in Page Setup Dialog 3. Perform Print out/Print preview Actual results: No background is painted in Print output/Print preview Expected results: Background should be painted in Print output/Print preview Regression window(m-c) Good: http://hg.mozilla.org/mozilla-central/rev/a2c46e2c7df1 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130110 Firefox/21.0 ID:20130110010011 Bad: http://hg.mozilla.org/mozilla-central/rev/5a74a94f6d44 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130110 Firefox/21.0 ID:20130110024509 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=a2c46e2c7df1&tochange=5a74a94f6d44 Regressed by: 5a74a94f6d44 Olli Pettay — Bug 817342, delay script runners when making static clones, r=roc
Blocks: 817342
Attachment missing?
Whiteboard: regressed by Bug 817342
Assignee: nobody → bugs
Attached file testcase html
so, bgcolor seems to be printed, but image isn't.
Attached patch patchSplinter Review
So we manually clone style sheets in nsIDocument::CreateStaticClone, and since the scriptrunners end up now running after that, also nsStyleLinkElement::DoUpdateStyleSheet is run after we have already the right stylesheet and manual bg image loading fails. I'll try to figure out if I can write a chrome test for this.
Attachment #709679 - Flags: review?(roc)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Comment on attachment 709679 [details] [diff] [review] patch [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 817342 User impact if declined: background images aren't painted Testing completed (on m-c, etc.): just landed to m-c Risk to taking this patch (and alternatives if risky): we don't have good tests for printing. So this is tiny bit risky as patches changing printing usually are. String or UUID changes made by this patch: NA
Attachment #709679 - Flags: approval-mozilla-aurora?
Target Milestone: --- → mozilla21
Keywords: qawanted
Triage comment: Will wait for verification on nightly before approving uplift seeing as we're missing wider test coverage.
Verified fixed on Firefox Nightly 21.0a1 2013-02-06. Leaving verifyme keyword so we can verify on other branches once uplifted.
Comment on attachment 709679 [details] [diff] [review] patch Approving on aurora, considering the QA verfication on nightly.
Attachment #709679 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Mozilla/5.0 (Windows NT 6.1; rv:20.0) Gecko/20100101 Firefox/20.0 Build ID: 20130220104816 Verify as fixed on Firefox 20 beta 1: - background is properly painted in Print output/Print preview.
QA Contact: simona.marcu
Depends on: 878037
mass remove verifyme requests greater than 4 months old
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: