Bug 836875 - Background is no longer painted in Print output/Print preview, r=roc, a=bajaj